--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdlib.h": "c",
         "functional": "c",
-        "iterator": "c"
+        "iterator": "c",
+        "image.h": "c"
     }
 }
