--- a/graphics/lib/makefile
+++ b/graphics/lib/makefile
@@ -28,13 +28,13 @@ LIBDIR =.
 BINDIR =../bin
 
 # put all of the relevant include files here
-_DEPS = ppmIO.h image.h fractals.h noise.h
+_DEPS = ppmIO.h image.h fractals.h noise.h point.h
 
 # convert them to point to the right place
 DEPS = $(patsubst %,$(INCDIR)/%,$(_DEPS))
 
 # put a list of all the object files (with .o endings)
-_COMMON = ppmIO.o image.o fractals.o noise.o
+_COMMON = ppmIO.o image.o fractals.o noise.o point.o
 
 # convert them to point to the right place
 COMMON = $(patsubst %,$(ODIR)/%,$(_COMMON))
