working on circles

--- a/graphics/src/makefile
+++ b/graphics/src/makefile
@@ -26,7 +26,7 @@ LIBS = -lm -limageIO
 LFLAGS = -L$(LIBDIR) -L/opt/local/lib
 
 # put all of the relevant include files here
-_DEPS = ppmIO.h image.h fractals.h noise.h line.h point.h
+_DEPS = ppmIO.h image.h fractals.h noise.h line.h point.h circle.h
 
 # convert them to point to the right place
 DEPS = $(patsubst %,$(INCDIR)/%,$(_DEPS))
@@ -40,7 +40,8 @@ EXECUTABLES = ppmtest \
 			  fractalstest \
 			  fractalmain \
 			  perlinnoise \
-			  test3d
+			  test3d \
+			  circletest
 
 LAB1_EXECUTABLES = lab1 \
 				   mask \
@@ -48,7 +49,7 @@ LAB1_EXECUTABLES = lab1 \
 
 LAB2_EXECUTABLES = image_api fractalstest perlinnoise fractalmain
 
-LAB3_EXECUTABLES = test3d
+LAB3_EXECUTABLES = test3d circletest
 
 
 # put a list of all the object files here for all executables (with .o endings)
@@ -104,6 +105,9 @@ perlinnoise: $(ODIR)/perlinnoise.o
 	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
 test3d: $(ODIR)/test3d.o
+	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
+
+circletest: $(ODIR)/circletest.o
 	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
 .PHONY: clean
