--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "stdlib.h": "c",
         "functional": "c",
         "iterator": "c",
-        "image.h": "c"
+        "image.h": "c",
+        "circle.h": "c"
     }
 }
