--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "image.h": "c",
         "circle.h": "c",
         "polyline.h": "c",
-        "point.h": "c"
+        "point.h": "c",
+        "stack.h": "c"
     }
 }
