--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "circle.h": "c",
         "polyline.h": "c",
         "point.h": "c",
-        "stack.h": "c"
+        "stack.h": "c",
+        "floodfill.h": "c"
     }
 }
