--- a/graphics/src/makefile
+++ b/graphics/src/makefile
@@ -27,7 +27,7 @@ LFLAGS = -L$(LIBDIR) -L/opt/local/lib
 
 # put all of the relevant include files here
 _DEPS = ppmIO.h image.h fractals.h noise.h line.h point.h circle.h elipse.h polyline.h stack.h \
-		floodfill.h
+		floodfill.h polygon.h
 
 # convert them to point to the right place
 DEPS = $(patsubst %,$(INCDIR)/%,$(_DEPS))
@@ -49,7 +49,8 @@ EXECUTABLES = ppmtest \
 			  test3c \
 			  illustration \
 			  testbench \
-			  floodfilltest
+			  floodfilltest \
+			  polygontest
 
 LAB1_EXECUTABLES = lab1 \
 				   mask \
@@ -58,6 +59,8 @@ LAB1_EXECUTABLES = lab1 \
 LAB2_EXECUTABLES = image_api fractalstest perlinnoise fractalmain
 
 LAB3_EXECUTABLES = test3d circletest elipsetest test3a test3b test3c illustration testbench floodfilltest
+
+LAB4_EXECUTABLES = polygontest
 
 
 # put a list of all the object files here for all executables (with .o endings)
@@ -86,6 +89,12 @@ lab1execs:
 
 lab2execs:
 	for i in $(LAB2_EXECUTABLES); do (make $$i); done
+
+lab3execs:
+	for i in $(LAB3_EXECUTABLES); do (make $$i); done
+
+lab4execs:
+	for i in $(LAB4_EXECUTABLES); do (make $$i); done
 
 # put the specific executable rules here
 ppmtest: $(ODIR)/ppmmain.o
@@ -137,6 +146,9 @@ testbench: $(ODIR)/testbench.o
 	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
 floodfilltest: $(ODIR)/floodfilltest.o
+	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
+
+polygontest: $(ODIR)/polygontest.o
 	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
 .PHONY: clean
