--- a/graphics/src/makefile
+++ b/graphics/src/makefile
@@ -26,7 +26,7 @@ LIBS = -lm -limageIO
 LFLAGS = -L$(LIBDIR) -L/opt/local/lib
 
 # put all of the relevant include files here
-_DEPS = ppmIO.h image.h fractals.h noise.h line.h point.h circle.h elipse.h polyline.h stack.h \
+_DEPS = ppmIO.h graphics.h image.h fractals.h noise.h line.h point.h circle.h elipse.h polyline.h stack.h \
 		floodfill.h polygon.h
 
 # convert them to point to the right place
@@ -50,7 +50,8 @@ EXECUTABLES = ppmtest \
 			  illustration \
 			  testbench \
 			  floodfilltest \
-			  polygontest
+			  polygontest \
+			  test4a
 
 LAB1_EXECUTABLES = lab1 \
 				   mask \
@@ -60,7 +61,7 @@ LAB2_EXECUTABLES = image_api fractalstest perlinnoise fractalmain
 
 LAB3_EXECUTABLES = test3d circletest elipsetest test3a test3b test3c illustration testbench floodfilltest
 
-LAB4_EXECUTABLES = polygontest
+LAB4_EXECUTABLES = polygontest test4a
 
 
 # put a list of all the object files here for all executables (with .o endings)
@@ -148,6 +149,9 @@ floodfilltest: $(ODIR)/floodfilltest.o
 	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
 polygontest: $(ODIR)/polygontest.o
+	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
+
+test4a: $(ODIR)/test4a.o
 	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
 .PHONY: clean
