commented out unused polygon attr code

--- a/graphics/src/makefile
+++ b/graphics/src/makefile
@@ -51,7 +51,8 @@ EXECUTABLES = ppmtest \
 			  testbench \
 			  floodfilltest \
 			  polygontest \
-			  test4a
+			  test4a \
+			  test4c
 
 LAB1_EXECUTABLES = lab1 \
 				   mask \
@@ -61,7 +62,7 @@ LAB2_EXECUTABLES = image_api fractalstest perlinnoise fractalmain
 
 LAB3_EXECUTABLES = test3d circletest elipsetest test3a test3b test3c illustration testbench floodfilltest
 
-LAB4_EXECUTABLES = polygontest test4a
+LAB4_EXECUTABLES = polygontest test4a test4c
 
 
 # put a list of all the object files here for all executables (with .o endings)
@@ -152,6 +153,9 @@ polygontest: $(ODIR)/polygontest.o
 	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
 test4a: $(ODIR)/test4a.o
+	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
+
+test4c: $(ODIR)/test4c.o
 	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
 .PHONY: clean
