ship body and smoke

--- a/graphics/src/makefile
+++ b/graphics/src/makefile
@@ -53,7 +53,8 @@ EXECUTABLES = ppmtest \
 			  polygontest \
 			  test4a \
 			  test4c \
-			  test4b
+			  test4b \
+			  rocket
 
 LAB1_EXECUTABLES = lab1 \
 				   mask \
@@ -63,7 +64,7 @@ LAB2_EXECUTABLES = image_api fractalstest perlinnoise fractalmain
 
 LAB3_EXECUTABLES = test3d circletest elipsetest test3a test3b test3c illustration testbench floodfilltest
 
-LAB4_EXECUTABLES = polygontest test4a test4c test4b
+LAB4_EXECUTABLES = polygontest test4a test4c test4b rocket
 
 
 # put a list of all the object files here for all executables (with .o endings)
@@ -160,6 +161,9 @@ test4b: $(ODIR)/test4b.o
 	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
 test4c: $(ODIR)/test4c.o
+	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
+
+rocket: $(ODIR)/rocket.o
 	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
 .PHONY: clean
