--- a/graphics/src/makefile
+++ b/graphics/src/makefile
@@ -27,7 +27,7 @@ LFLAGS = -L$(LIBDIR) -L/opt/local/lib
 
 # put all of the relevant include files here
 _DEPS = ppmIO.h graphics.h image.h fractals.h noise.h line.h point.h circle.h elipse.h polyline.h stack.h \
-		floodfill.h polygon.h vector.h matrix.h
+		floodfill.h polygon.h vector.h matrix.h view.h
 
 # convert them to point to the right place
 DEPS = $(patsubst %,$(INCDIR)/%,$(_DEPS))
@@ -56,7 +56,8 @@ EXECUTABLES = ppmtest \
 			  test4b \
 			  rocket \
 			  barycentricimg \
-			  test5a
+			  test5a \
+			  test5b
 
 LAB1_EXECUTABLES = lab1 \
 				   mask \
@@ -68,7 +69,7 @@ LAB3_EXECUTABLES = test3d circletest elipsetest test3a test3b test3c illustratio
 
 LAB4_EXECUTABLES = polygontest test4a test4c test4b rocket barycentricimg
 
-LAB5_EXECUTABLES = test5a
+LAB5_EXECUTABLES = test5a test5b
 
 
 # put a list of all the object files here for all executables (with .o endings)
@@ -174,6 +175,9 @@ barycentricimg: $(ODIR)/barycentricimg.o
 	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
 test5a: $(ODIR)/test5a.o
+	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
+
+test5b: $(ODIR)/test5b.o
 	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
 .PHONY: clean
