--- a/graphics/lib/makefile
+++ b/graphics/lib/makefile
@@ -29,14 +29,14 @@ BINDIR =../bin
 
 # put all of the relevant include files here
 _DEPS = ppmIO.h graphics.h image.h fractals.h noise.h point.h line.h circle.h elipse.h polyline.h stack.h floodfill.h \
-		polygon.h list.h vector.h matrix.h
+		polygon.h list.h vector.h matrix.h view.h
 
 # convert them to point to the right place
 DEPS = $(patsubst %,$(INCDIR)/%,$(_DEPS))
 
 # put a list of all the object files (with .o endings)
 _COMMON = ppmIO.o image.o fractals.o noise.o point.o line.o circle.o elipse.o polyline.o stack.o floodfill.o \
-		  polygon.o list.o scanline.o barycentric.o vector.o matrix.o
+		  polygon.o list.o scanline.o barycentric.o vector.o matrix.o view.o
 
 # convert them to point to the right place
 COMMON = $(patsubst %,$(ODIR)/%,$(_COMMON))
