--- a/graphics/src/makefile
+++ b/graphics/src/makefile
@@ -58,7 +58,8 @@ EXECUTABLES = ppmtest \
 			  barycentricimg \
 			  test5a \
 			  test5b \
-			  test5c
+			  test5c \
+			  view2d
 
 LAB1_EXECUTABLES = lab1 \
 				   mask \
@@ -70,7 +71,7 @@ LAB3_EXECUTABLES = test3d circletest elipsetest test3a test3b test3c illustratio
 
 LAB4_EXECUTABLES = polygontest test4a test4c test4b rocket barycentricimg
 
-LAB5_EXECUTABLES = test5a test5b test5c
+LAB5_EXECUTABLES = test5a test5b test5c view2d
 
 
 # put a list of all the object files here for all executables (with .o endings)
@@ -182,6 +183,9 @@ test5b: $(ODIR)/test5b.o
 	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
 test5c: $(ODIR)/test5c.o
+	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
+
+view2d: $(ODIR)/view2d.o
 	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
 .PHONY: clean
