added ship and human

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "fractals.h": "c",
         "matrix.h": "c",
         "view.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "list.h": "c"
     }
 }
