--- a/graphics/src/makefile
+++ b/graphics/src/makefile
@@ -62,7 +62,8 @@ EXECUTABLES = ppmtest \
 			  scene2d \
 			  scene3d \
 			  aliens2d \
-			  test6a
+			  test6a \
+			  test6b
 
 LAB1_EXECUTABLES = lab1 \
 				   mask \
@@ -76,7 +77,7 @@ LAB4_EXECUTABLES = polygontest test4a test4c test4b rocket barycentricimg
 
 LAB5_EXECUTABLES = test5a test5b test5c scene2d scene3d aliens2d
 
-LAB6_EXECUTABLES = test6a
+LAB6_EXECUTABLES = test6a test6b
 
 # put a list of all the object files here for all executables (with .o endings)
 _OBJ = tiffmain.o ppmmain.o
@@ -205,6 +206,9 @@ scene3d: $(ODIR)/scene3d.o
 	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
 test6a: $(ODIR)/test6a.o
+	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
+
+test6b: $(ODIR)/test6b.o
 	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
 
