created dining set

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "stdio.h": "c",
         "list.h": "c",
         "ppmio.h": "c",
-        "cube.h": "c"
+        "cube.h": "c",
+        "__locale": "c"
     }
 }
