--- a/graphics/src/makefile
+++ b/graphics/src/makefile
@@ -33,38 +33,10 @@ _DEPS = ppmIO.h graphics.h image.h fractals.h noise.h line.h point.h circle.h el
 DEPS = $(patsubst %,$(INCDIR)/%,$(_DEPS))
 
 # put a list of the executables here
-EXECUTABLES = ppmtest \
-			  lab1 \
-			  mask \
-			  composite \
-			  image_api \
-			  fractalstest \
-			  fractalmain \
-			  perlinnoise \
-			  test3d \
-			  circletest \
-			  elipsetest \
-			  test3a \
-			  test3b \
-			  test3c \
-			  illustration \
-			  testbench \
-			  floodfilltest \
-			  polygontest \
-			  test4a \
-			  test4c \
-			  test4b \
-			  rocket \
-			  barycentricimg \
-			  test5a \
-			  test5b \
-			  test5c \
-			  scene2d \
-			  scene3d \
-			  aliens2d \
-			  test6a \
-			  test6b \
-			  lab6cube
+EXECUTABLES = ppmtest lab1 mask composite image_api fractalstest fractalmain perlinnoise \
+			  test3d circletest elipsetest test3a test3b test3c illustration testbench \
+			  floodfilltest polygontest test4a test4c test4b rocket barycentricimg test5a \
+			  test5b test5c scene2d scene3d aliens2d test6a test6b lab6cube restaurant
 
 LAB1_EXECUTABLES = lab1 \
 				   mask \
@@ -78,7 +50,7 @@ LAB4_EXECUTABLES = polygontest test4a test4c test4b rocket barycentricimg
 
 LAB5_EXECUTABLES = test5a test5b test5c scene2d scene3d aliens2d
 
-LAB6_EXECUTABLES = test6a test6b lab6cube
+LAB6_EXECUTABLES = test6a test6b lab6cube restaurant
 
 # put a list of all the object files here for all executables (with .o endings)
 _OBJ = tiffmain.o ppmmain.o
@@ -215,6 +187,8 @@ test6b: $(ODIR)/test6b.o
 lab6cube: $(ODIR)/lab6cube.o
 	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
+restaurant: $(ODIR)/restaurant.o
+	$(CC) -o $(BINDIR)/$@ $^ $(LFLAGS) $(LIBS)
 
 .PHONY: clean
 
