polygon draw working without lines

--- a/graphics/lib/makefile
+++ b/graphics/lib/makefile
@@ -38,7 +38,7 @@ DEPS = $(patsubst %,$(INCDIR)/%,$(_DEPS))
 # put a list of all the object files (with .o endings)
 _COMMON = ppmIO.o image.o fractals.o noise.o point.o line.o circle.o elipse.o polyline.o stack.o floodfill.o \
 		  polygon.o cube.o list.o scanline.o barycentric.o vector.o matrix.o view.o drawstate.o module.o \
-		  curve.o pyramid.o cone.o sphere.o
+		  curve.o pyramid.o cone.o sphere.o scanlinez.o
 
 # convert them to point to the right place
 COMMON = $(patsubst %,$(ODIR)/%,$(_COMMON))
