implemented quat and force

--- a/graphics/.vscode/settings.json
+++ b/graphics/.vscode/settings.json
@@ -10,6 +10,9 @@
         "polygon.h": "c",
         "stdlib.h": "c",
         "list.h": "c",
-        "cone.h": "c"
+        "cone.h": "c",
+        "quaternion.h": "c",
+        "force.h": "c",
+        "physics.h": "c"
     }
 }
