implemented rigidbody tick

--- a/graphics/.vscode/settings.json
+++ b/graphics/.vscode/settings.json
@@ -13,6 +13,7 @@
         "cone.h": "c",
         "quaternion.h": "c",
         "force.h": "c",
-        "physics.h": "c"
+        "physics.h": "c",
+        "rigidbody.h": "c"
     }
 }
